added grid from gridifier

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Shannon Hawn</title>
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +12,12 @@
   <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
 </head>
 <body>
+
+<ul>
+  <li><a href="">About</a></li>
+  <li><a href="">Work</a></li>
+  <li><a href="">Contact</a></li>
+</ul>
 
 <main>
   <header>
