added work placeholders

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
   </div>
 </main>
 
+  <div class="work">
+    <img src="http://placehold.it/300x350">
+  </div>
+
+  <div class="contact">
+
+  </div>
+
 <footer>
   <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
   <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
