--- a/index.html
+++ b/index.html
@@ -24,16 +24,22 @@
     <img class="me" src="img/shannon.svg" alt="illustration of designer">
   </header>
 
-  <div class="bio">
-    <h1>HELLO<h1>
-    <p>I'm Shannon. I'm a graphic designer based in Ottawa with my husband and our tiny zoo of animals.</p>
-    <p>Passionate about illustration, photography and pugs.</p>
-    <a href="mailto:shannonhawn@hotmail.com"><p>shannonhawn@hotmail.com<p></a>
+  <div class="nameplate">
+    <h1>SHANNON HAWN<h1>
   </div>
 </main>
 
+
   <div class="work">
     <img src="http://placehold.it/300x350">
+    <img src="http://placehold.it/300x350">
+    <img src="http://placehold.it/300x350">
+  </div>
+
+  <div class="about">
+    <p>I'm Shannon. I'm a graphic designer based in Ottawa with my husband and our tiny zoo of animals.</p>
+    <p>Passionate about illustration, photography and pugs.</p>
+    <a href="mailto:shannonhawn@hotmail.com"><p>shannonhawn@hotmail.com<p></a>
   </div>
 
   <div class="contact">
