--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 </head>
 <body>
 
-<ul>
-  <li><a href="">About</a></li>
-  <li><a href="">Work</a></li>
-  <li><a href="">Contact</a></li>
-</ul>
+<div class="nav">
+  <ul>
+    <li><a href="">About</a></li>
+    <li><a href="">Work</a></li>
+    <li><a href="">Contact</a></li>
+  </ul>
+</div>
 
 <main>
   <header>
