--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
 
-<div class="nav">
+<div class="grid">
+  <div class="unit unit-xs-1 unit-s-1 unit-m-2 unit-l-2"
   <ul>
     <li><a href="">About</a></li>
     <li><a href="">Work</a></li>
@@ -32,6 +33,9 @@
 </main>
 
   <div class="work">
+    <img src="http://placehold.it/300x350">
+    <img src="http://placehold.it/300x350">
+    <img src="http://placehold.it/300x350">
     <img src="http://placehold.it/300x350">
     <img src="http://placehold.it/300x350">
     <img src="http://placehold.it/300x350">
