Added about title

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   </div>
 
   <div class="about">
+      <h2>ABOUT<h2>
     <p>I'm Shannon. I'm a graphic designer based in Ottawa with my husband and our tiny zoo of animals.</p>
     <p>Passionate about illustration, photography and pugs.</p>
     <a href="mailto:shannonhawn@hotmail.com"><p>shannonhawn@hotmail.com<p></a>
