--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <div class="grid">
-  <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2"
+  <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2">
   <ul>
     <li><a href="">About</a></li>
     <li><a href="">Work</a></li>
