--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <div class="grid">
   <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2">
   <ul>
-    <li><a href="">About</a></li>
-    <li><a href="">Work</a></li>
-    <li><a href="">Contact</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="work.html">Work</a></li>
+    <li><a href="contact.html">Contact</a></li>
   </ul>
   </div>
 </div>
@@ -52,11 +52,12 @@
     <a href="mailto:shannonhawn@hotmail.com"><p>shannonhawn@hotmail.com<p></a>
   </div>
 
+<div class="contact">
 <footer>
   <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
   <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
   <a href="https://www.behance.net/hawnsauve/"><img class="social"src="img/be.svg"></a></li>
 </footer>
-
+</div>
 </body>
 </html>
