--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <div class="grid">
   <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2">
   <ul>
-    <li><a href="about.html">About</a></li>
-    <li><a href="work.html">Work</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#work">Work</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
   </div>
 </div>
