amended padding, changed fonts

--- a/index.html
+++ b/index.html
@@ -5,35 +5,37 @@
   <title>Shannon Hawn</title>
   <link href="css/main.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
+  <link href="css/module.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ultra" rel="stylesheet">
 </head>
 <body>
 
-<div class="grid">
-  <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2">
-  <ul>
-    <li><a href="#about">About</a></li>
-    <li><a href="#work">Work</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-  </div>
-</div>
-
 <main>
-  <header>
-    <img class="me" src="img/shannon.svg" alt="illustration of designer">
-  </header>
+    <div class="grid">
+      <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2">
+      <ul>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      </div>
+    </div>
 
-  <div class="nameplate">
+<header>
+    <img class="me" src="img/shannon.svg" alt="illustration of designer">
+    <a id="me"></a>
     <h1>SHANNON HAWN<h1>
-  </div>
+</header>
 </main>
 
   <div class="work">
+    <a id="work"></a>
+    <h2>PORTFOLIO<h2>
     <img src="http://placehold.it/300x350">
     <img src="http://placehold.it/300x350">
     <img src="http://placehold.it/300x350">
@@ -46,6 +48,7 @@
   </div>
 
   <div class="about">
+    <a id="about"></a>
       <h2>ABOUT<h2>
     <p>I'm Shannon. I'm a graphic designer based in Ottawa with my husband and our tiny zoo of animals.</p>
     <p>Passionate about illustration, photography and pugs.</p>
@@ -53,11 +56,16 @@
   </div>
 
 <div class="contact">
+  <a id="contact"></a>
 <footer>
   <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
   <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
   <a href="https://www.behance.net/hawnsauve/"><img class="social"src="img/be.svg"></a></li>
+<div class="top">
+  <a href="#me">TOP</a>
+</div>
 </footer>
 </div>
+
 </body>
 </html>
