amended top link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <main>
     <div class="grid">
       <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2">
+        <a id="nav"></a>
       <ul>
         <li><a href="#work">Work</a></li>
         <li><a href="#about">About</a></li>
@@ -33,6 +34,14 @@
 </header>
 </main>
 
+<div class="about">
+  <a id="about"></a>
+    <h2>ABOUT<h2>
+  <p>I'm Shannon. I'm a graphic designer based in Ottawa with my husband and our tiny zoo of animals.</p>
+  <p>Passionate about illustration, photography and pugs.</p>
+  <a href="mailto:shannonhawn@hotmail.com"><p>shannonhawn@hotmail.com<p></a>
+</div>
+
   <div class="work">
     <a id="work"></a>
     <h2>PORTFOLIO<h2>
@@ -47,14 +56,6 @@
     <img src="http://placehold.it/300x350">
   </div>
 
-  <div class="about">
-    <a id="about"></a>
-      <h2>ABOUT<h2>
-    <p>I'm Shannon. I'm a graphic designer based in Ottawa with my husband and our tiny zoo of animals.</p>
-    <p>Passionate about illustration, photography and pugs.</p>
-    <a href="mailto:shannonhawn@hotmail.com"><p>shannonhawn@hotmail.com<p></a>
-  </div>
-
 <div class="contact">
   <a id="contact"></a>
 <footer>
@@ -62,7 +63,7 @@
   <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
   <a href="https://www.behance.net/hawnsauve/"><img class="social"src="img/be.svg"></a></li>
 <div class="top">
-  <a href="#me">TOP</a>
+  <a href="#nav">TOP</a>
 </div>
 </footer>
 </div>
