added images, aligned header

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Ultra" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
+
 </head>
 <body>
 
-<main>
+<header>
     <div class="grid">
       <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2">
         <a id="nav"></a>
@@ -26,42 +26,44 @@
       </ul>
       </div>
     </div>
+</header>
 
-<header>
+<main>
+  <div class="grid">
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2">
     <img class="me" src="img/shannon.svg" alt="illustration of designer">
     <a id="me"></a>
-    <h1>SHANNON HAWN<h1>
-</header>
+    <h3>Shannon Hawn</h3>
+   </div>
+ </div>
 </main>
 
 <div class="about">
   <a id="about"></a>
-    <h2>ABOUT<h2>
-  <p>I'm Shannon. I'm a graphic designer based in Ottawa with my husband and our tiny zoo of animals.</p>
-  <p>Passionate about illustration, photography and pugs.</p>
+  <p>Shannon Hawn is a graphic designer based in Ottawa with her husband and their tiny zoo of animals. She is an advertising grad, Pinterest addict and lover of pugs. She loves smart, beautiful design, photography and illustration.</p>
 </div>
 
   <div class="work">
     <a id="work"></a>
-    <h2>PORTFOLIO<h2>
-    <img src="http://placehold.it/300x350">
-    <img src="http://placehold.it/300x350">
-    <img src="http://placehold.it/300x350">
-    <img src="http://placehold.it/300x350">
-    <img src="http://placehold.it/300x350">
-    <img src="http://placehold.it/300x350">
-    <img src="http://placehold.it/300x350">
-    <img src="http://placehold.it/300x350">
-    <img src="http://placehold.it/300x350">
+    <img src="http://placehold.it/300x400">
+    <img src="http://placehold.it/300x400">
+    <img src="http://placehold.it/300x400">
+    <img src="http://placehold.it/300x400">
+    <img src="http://placehold.it/300x400">
+    <img src="http://placehold.it/300x400">
+    <img src="http://placehold.it/300x400">
+    <img src="http://placehold.it/300x400">
+    <img src="http://placehold.it/300x400">
+    <img src="http://placehold.it/300x400">
   </div>
 
 <div class="contact">
   <a id="contact"></a>
 <footer>
-  <a href="mailto:shannonhawn@hotmail.com"><p>shannonhawn@hotmail.com<p></a>
+  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a></li>
   <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
   <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
-  <a href="https://www.behance.net/hawnsauve/"><img class="social"src="img/be.svg"></a></li>
+  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a></li>
 <div class="top">
   <a href="#nav">TOP</a>
 </div>
