amended width for large sizes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <body>
 
 <header>
-    <div class="grid">
-      <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2">
+    <div class="nav">
         <a id="nav"></a>
       <ul>
         <li><a href="#work">Work</a></li>
@@ -25,12 +24,10 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
       </div>
-    </div>
 </header>
 
 <main>
-  <div class="grid">
-    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2">
+  <div class="image">
     <img class="me" src="img/shannon.svg" alt="illustration of designer">
     <a id="me"></a>
     <h3>Shannon Hawn</h3>
