attempted to put a opacity transition on images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <title>Shannon Hawn</title>
   <link href="css/main.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
   <link href="css/module.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
@@ -37,22 +36,23 @@
 
 <div class="about">
   <a id="about"></a>
-  <p>Shannon Hawn is a graphic designer based in Ottawa with her husband and their tiny zoo of animals. She is an advertising grad, Pinterest addict and lover of pugs. She loves smart, beautiful design, photography and illustration.</p>
+  <p>Shannon Hawn is a graphic designer based in Ottawa with her husband and their tiny zoo of animals. She is an advertising grad, Pinterest addict and lover of pugs. She loves beautiful design, photography and illustration.</p>
 </div>
 
   <div class="work">
     <a id="work"></a>
-    <img src="http://placehold.it/300x400">
-    <img src="http://placehold.it/300x400">
-    <img src="http://placehold.it/300x400">
-    <img src="http://placehold.it/300x400">
-    <img src="http://placehold.it/300x400">
-    <img src="http://placehold.it/300x400">
-    <img src="http://placehold.it/300x400">
-    <img src="http://placehold.it/300x400">
-    <img src="http://placehold.it/300x400">
-    <img src="http://placehold.it/300x400">
-  </div>
+			<img src="http://placehold.it/300x400"/>
+      <img src="http://placehold.it/300x400"/>
+      <img src="http://placehold.it/300x400"/>
+      <img src="http://placehold.it/300x400"/>
+      <img src="http://placehold.it/300x400"/>
+      <img src="http://placehold.it/300x400"/>
+      <img src="http://placehold.it/300x400"/>
+      <img src="http://placehold.it/300x400"/>
+      <img src="http://placehold.it/300x400"/>
+      <img src="http://placehold.it/300x400"/>
+	</div>
+
 
 <div class="contact">
   <a id="contact"></a>
