created html pages for each piece of portfolio work

--- a/bekkers.html
+++ b/bekkers.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Harry Potter Movie Poster</title>
+  <title>Bekkers</title>
   <link href="css/description.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
@@ -24,7 +24,7 @@
   </header>
 
 <main>
-    <h4>Harry Potter Movie Poster</h4>
+    <h4>Bekker's Pet Care Logo Redesign</h4>
     <div class="image">
     	<img src="http://placehold.it/300x400"/>
     </div>
