--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
 
   <div class="work">
     <a id="work"></a>
-			<img src="http://placehold.it/300x400"/>
-      <img src="http://placehold.it/300x400"/>
-      <img src="http://placehold.it/300x400"/>
-      <img src="http://placehold.it/300x400"/>
-      <img src="http://placehold.it/300x400"/>
+			<a href="harrypotter.html"><img src="img/hp.png"/>
+      <a href="bekkers.html"><img src="img/logo.png"/>
+      <a href="fromm.html"><img src="img/from.png"/>
       <img src="http://placehold.it/300x400"/>
       <img src="http://placehold.it/300x400"/>
       <img src="http://placehold.it/300x400"/>
