--- a/infographic.html
+++ b/infographic.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Harry Potter Movie Poster</title>
+  <title>Infographic</title>
   <link href="css/description.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
@@ -24,9 +24,9 @@
   </header>
 
 <main>
-    <h4>Harry Potter Movie Poster</h4>
+    <h4>Greenest Ways to Get Around Infographic</h4>
     <div class="image">
-    	<img src="http://placehold.it/300x400"/>
+    	<img src="http://placehold.it/400x300"/>
     </div>
     <p></p>
 </main>
