added photos for each piece of work and linked to html

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
   <div class="work">
     <a id="work"></a>
-			<a href="harrypotter.html"><img src="img/hp.png"/>
+			<a href="harrypotter.html"><img src="img/hpotter.png"/>
       <a href="bekkers.html"><img src="img/logo.png"/>
-      <a href="fromm.html"><img src="img/from.png"/>
-      <img src="http://placehold.it/300x400"/>
-      <img src="http://placehold.it/300x400"/>
-      <img src="http://placehold.it/300x400"/>
-      <img src="http://placehold.it/300x400"/>
+      <a href="fromm.html"><img src="img/frommbag.png"/>
+      <a href="vegan.html"><img src="img/vegan.png"/>
+      <a href="barkpark.html"><img src="img/barkparkphone.png"/>
+      <a href="infographic.html"><img src="img/info.png"/>
+      <a href="doll.html"><img src="img/doll.png"/>
       <img src="http://placehold.it/300x400"/>
 	</div>
 
