added  css for harry potter poster

--- a/harrypotter.html
+++ b/harrypotter.html
@@ -24,22 +24,25 @@
   </header>
 
 <main>
+  <div class="description">
     <h4>Harry Potter Movie Poster</h4>
-    <div class="image">
-    	<img src="http://placehold.it/300x400"/>
-    </div>
-    <p></p>
+      <img class="poster" src="img/hpotter.png" alt="">
+      <img class="album" src="img/vinyl.png" alt="">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
 </main>
 
 <div class="contact">
   <a id="contact"></a>
 <footer>
-  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a></li>
-  <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
-  <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
-  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a></li>
+  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg" alt=""></a>
+  <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg" alt=""></a>
+  <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg" alt=""></a>
+  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg" alt=""></a>
 <div class="top">
   <a href="#nav">TOP</a>
+  <br>
+  <a href="index.html">HOME</a>
 </div>
 </footer>
 </div>
