--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Shannon Hawn</title>
   <link href="css/main.css" rel="stylesheet">
-  <link href="css/module.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,13 +41,13 @@
 
   <div class="work">
     <a id="work"></a>
-			<a href="harrypotter.html"><img src="img/hpotter.png"/>
-      <a href="bekkers.html"><img src="img/logo.png"/>
-      <a href="fromm.html"><img src="img/frommbag.png"/>
-      <a href="vegan.html"><img src="img/vegan.png"/>
-      <a href="barkpark.html"><img src="img/barkparkphone.png"/>
-      <a href="infographic.html"><img src="img/info.png"/>
-      <a href="doll.html"><img src="img/doll.png"/>
+			<a href="harrypotter.html"><img src="img/hpotter.png" alt=""></a>
+      <a href="bekkers.html"><img src="img/logo.png" alt=""></a>
+      <a href="fromm.html"><img src="img/frommbag.png" alt=""></a>
+      <a href="vegan.html"><img src="img/vegan.png" alt=""></a>
+      <a href="barkpark.html"><img src="img/barkparkphone.png" alt=""></a>
+      <a href="infographic.html"><img src="img/info.png" alt=""></a>
+      <a href="doll.html"><img src="img/doll.png" alt=""></a>
       <img src="http://placehold.it/300x400"/>
 	</div>
 
@@ -55,10 +55,10 @@
 <div class="contact">
   <a id="contact"></a>
 <footer>
-  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a></li>
-  <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
-  <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
-  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a></li>
+  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a>
+  <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a>
+  <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a>
+  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a>
 <div class="top">
   <a href="#nav">TOP</a>
 </div>
