deleted main, amended padding of right

--- a/harrypotter.html
+++ b/harrypotter.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-ca">
+
 <head>
   <meta charset="utf-8">
   <title>Harry Potter Movie Poster</title>
-  <link href="css/description.css" rel="stylesheet">
+  <link href="css/harrypotter.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
 </head>
 <body>
 
@@ -16,36 +17,44 @@
       <div class="nav">
           <a id="nav"></a>
         <ul>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html">HOME</a></li>
         </ul>
-        </div>
+      </div>
   </header>
 
-<main>
-  <div class="description">
-    <h4>Harry Potter Movie Poster</h4>
-      <img class="poster" src="img/hpotter.png" alt="">
-      <img class="album" src="img/vinyl.png" alt="">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-</main>
+    <h2>Harry Potter Movie Poster</h2>
 
-<div class="contact">
-  <a id="contact"></a>
+  <div class="left">
+    <img src="img/hpotter.png" alt="">
+    <img src="img/vinyl.png" alt="">
+  </div>
+
+  <div class="right">
+    <p>I designed a movie poster for the final Harry Potter movie. These books and movies have
+      such a strong fandom so concept was key to keep fans happy and wanting to see the movie.
+      Harry and Voldemort are forever connected due to a backfired curse; he also uses
+      Harry’s blood to come back to life and their wands have twin cores. Because of that I connected
+      their faces. the last movie is about the final battle Hogwarts is on fire in the background. The skull
+      in the clouds represents the Dark Mark that Voldemort’s followers project into the sky. The
+      smoke represents disapparating. The colours used are the colours of the four houses of Hogwarts.
+      I created this poster using Photoshop, combining multiple images and using filters. All of the typography
+      was incorporated in Indesign. I designed a corresponding album and cover for the movie soundtrack. </p>
+  </div>
+
 <footer>
+  <div class="contact">
+    <a id="contact"></a>
+  </div>
+
   <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg" alt=""></a>
   <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg" alt=""></a>
   <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg" alt=""></a>
   <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg" alt=""></a>
+
 <div class="top">
   <a href="#nav">TOP</a>
-  <br>
-  <a href="index.html">HOME</a>
 </div>
 </footer>
-</div>
 
 </body>
 </html>
