--- a/hpsketches.html
+++ b/hpsketches.html
@@ -19,32 +19,19 @@
       <div class="nav">
           <a id="nav"></a>
         <ul>
-          <li><a href="index.html">HOME</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
-      </div>
+        </div>
   </header>
 
-    <h2>Harry Potter Movie Poster</h2>
-
-  <div class="left">
-    <img src="img/hpotter.png" alt="">
-    <img src="img/vinyl.png" alt="">
-  </div>
-
-  <div class="right">
-    <p>I designed a movie poster for the final Harry Potter movie. These books and movies have
-      such a strong fandom so concept was key to keep fans happy and wanting to see the movie.
-      Harry and Voldemort are forever connected due to a backfired curse; he also uses
-      Harry’s blood to come back to life and their wands have twin cores. Because of that I connected
-      their faces. the last movie is about the final battle Hogwarts is on fire in the background. The skull
-      in the clouds represents the Dark Mark that Voldemort’s followers project into the sky. The
-      smoke represents disapparating. The colours used are the colours of the four houses of Hogwarts.
-      I created this poster using Photoshop, combining multiple images and using filters. All of the typography
-      was incorporated in Indesign. I designed a corresponding album and cover for the movie soundtrack.
-      <br>
-      <br>
-      <a class="link" href="hpsketches.html"> Sketches </a></p>
-  </div>
+<div class="sketches">
+  <a id="sketch"></a>
+  <img src="http://placehold.it/300x400"/>
+  <img src="http://placehold.it/300x400"/>
+  <img src="http://placehold.it/300x400"/>
+</div>
 
 <footer>
   <div class="contact">
