--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Shannon Hawn</title>
   <link href="css/main.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
+  <link href="css/module.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
