amended writeup and changed nav for sketch page

--- a/harrypotter.html
+++ b/harrypotter.html
@@ -34,9 +34,9 @@
   <div class="right">
     <p>I designed a movie poster for the final Harry Potter movie. These books and movies have
       such a strong fandom so concept was key to keep fans happy and wanting to see the movie.
-      Harry and Voldemort are forever connected due to a backfired curse; he also uses
-      Harry’s blood to come back to life and their wands have twin cores. Because of that I connected
-      their faces. the last movie is about the final battle Hogwarts is on fire in the background. The skull
+      Harry Potter and Voldemort are forever connected due to a backfired curse; Voldemort also uses
+      Harry’s blood to come back to life and their wands have twin cores. Because of that my focal point is their faces as one.
+      The last movie is about the final battle at Hogwarts so I put the school on fire in the background. The skull
       in the clouds represents the Dark Mark that Voldemort’s followers project into the sky. The
       smoke represents disapparating. The colours used are the colours of the four houses of Hogwarts.
       I created this poster using Photoshop, combining multiple images and using filters. All of the typography
