--- a/hpsketches.html
+++ b/hpsketches.html
@@ -19,11 +19,9 @@
       <div class="nav">
           <a id="nav"></a>
         <ul>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html">HOME</a></li>
         </ul>
-        </div>
+      </div>
   </header>
 
 <div class="sketches">
