--- a/harrypotter.html
+++ b/harrypotter.html
@@ -20,6 +20,7 @@
           <a id="nav"></a>
         <ul>
           <li><a href="index.html">HOME</a></li>
+          <li><a href="index.html">Back</a></li>
         </ul>
       </div>
   </header>
