--- a/harrypotter.html
+++ b/harrypotter.html
@@ -19,8 +19,8 @@
       <div class="nav">
           <a id="nav"></a>
         <ul>
+          <li><a href="index.html">BACK</a></li>
           <li><a href="index.html">HOME</a></li>
-          <li><a href="index.html">Back</a></li>
         </ul>
       </div>
   </header>
