--- a/hpsketches.html
+++ b/hpsketches.html
@@ -20,6 +20,7 @@
           <a id="nav"></a>
         <ul>
           <li><a href="index.html">HOME</a></li>
+          <li><a href="harrypotter.html">BACK</a></li>
         </ul>
       </div>
   </header>
