added jekyll to all pages, created config

--- a/doll.html
+++ b/doll.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Momiji</title>
-  <link href="css/description.css" rel="stylesheet">
-  <meta name="handheldfriendly" content="true">
-  <meta name="mobileoptimized" content="240">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
-</head>
-<body>
+---
+layout: default
+---
 
   <header>
       <div class="nav">
@@ -26,7 +16,7 @@
 <main>
     <h4>Momiji Doll Package</h4>
     <div class="image">
-    	<img src="http://placehold.it/300x400"/>
+    	<img src="{{site.baseurl}}/http://placehold.it/300x400"/>
     </div>
     <p></p>
 </main>
@@ -45,4 +35,3 @@
 </div>
 
 </body>
-</html>
