--- a/hpsketches.html
+++ b/hpsketches.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-ca">
+---
+layout: default
+---
 
-<head>
-  <meta charset="utf-8">
-  <title>Harry Potter Movie Poster</title>
-  <link href="css/harrypotter.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
-  <link href="css/module.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
-  <meta name="handheldfriendly" content="true">
-  <meta name="mobileoptimized" content="240">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
 <body>
 
   <header>
@@ -27,9 +16,9 @@
 
 <div class="sketches">
   <a id="sketch"></a>
-  <img src="http://placehold.it/300x400"/>
-  <img src="http://placehold.it/300x400"/>
-  <img src="http://placehold.it/300x400"/>
+  <img src="{{site.baseurl}}/http://placehold.it/300x400"/>
+  <img src="{{site.baseurl}}/http://placehold.it/300x400"/>
+  <img src="{{site.baseurl}}/http://placehold.it/300x400"/>
 </div>
 
 <footer>
