--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
@@ -11,8 +12,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
-
 </head>
+-->
+
+---
+layout: default
+---
+
 <body>
 
 <header>
@@ -42,13 +48,13 @@
 
   <div class="work">
     <a id="work"></a>
-			<a href="harrypotter.html"><img src="img/hpotter.png" alt=""></a>
-      <a href="bekkers.html"><img src="img/logo.png" alt=""></a>
-      <a href="fromm.html"><img src="img/frommbag.png" alt=""></a>
-      <a href="vegan.html"><img src="img/vegan.png" alt=""></a>
-      <a href="barkpark.html"><img src="img/barkparkphone.png" alt=""></a>
-      <a href="infographic.html"><img src="img/info.png" alt=""></a>
-      <a href="doll.html"><img src="img/doll.png" alt=""></a>
+			<a href="{{site.baseurl}}/harrypotter/"><img src="{{site.baseurl}}/img/hpotter.png" alt=""></a>
+      <a href="{{site.baseurl}}/bekkers/"><img src="{{site.baseurl}}/img/logo.png" alt=""></a>
+      <a href="{{site.baseurl}}/fromm/"><img src="{{site.baseurl}}/img/frommbag.png" alt=""></a>
+      <a href="{{site.baseurl}}/vegan/"><img src="{{site.baseurl}}/img/vegan.png" alt=""></a>
+      <a href="{{site.baseurl}}/barkpark"><img src="{{site.baseurl}}/img/barkparkphone.png" alt=""></a>
+      <a href="{{site.baseurl}}/infographic/"><img src="{{site.baseurl}}/img/info.png" alt=""></a>
+      <a href="{{site.baseurl}}/doll/"><img src="{{site.baseurl}}/img/doll.png" alt=""></a>
 	</div>
 
 
@@ -66,4 +72,3 @@
 </div>
 
 </body>
-</html>
