--- a/infographic.html
+++ b/infographic.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Infographic</title>
-  <link href="css/description.css" rel="stylesheet">
-  <meta name="handheldfriendly" content="true">
-  <meta name="mobileoptimized" content="240">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
-</head>
+---
+layout
+---
+
 <body>
 
   <header>
@@ -26,7 +18,7 @@
 <main>
     <h4>Greenest Ways to Get Around Infographic</h4>
     <div class="image">
-    	<img src="http://placehold.it/400x300"/>
+    	<img src="{{site.baseurl}}/http://placehold.it/400x300"/>
     </div>
     <p></p>
 </main>
@@ -45,4 +37,3 @@
 </div>
 
 </body>
-</html>
