--- a/vegan.html
+++ b/vegan.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Vegan</title>
-  <link href="css/description.css" rel="stylesheet">
-  <meta name="handheldfriendly" content="true">
-  <meta name="mobileoptimized" content="240">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
-</head>
+---
+layout: default
+---
+
 <body>
 
   <header>
@@ -45,4 +37,3 @@
 </div>
 
 </body>
-</html>
