--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
 
   <div class="work">
     <a id="work"></a>
-			<a href="{{site.baseurl}}/harrypotter/"><img src="{{site.baseurl}}/{{img/hpotter.png}}" alt=""></a>
+			<a href="{{site.baseurl}}/harrypotter/"><img src="{{site.baseurl}}/{{img/hpotter}}" alt=""></a>
       <a href="{{site.baseurl}}/bekkers/"><img src="{{site.baseurl}}/img/logo.png" alt=""></a>
       <a href="{{site.baseurl}}/fromm/"><img src="{{site.baseurl}}/img/frommbag.png" alt=""></a>
       <a href="{{site.baseurl}}/vegan/"><img src="{{site.baseurl}}/img/vegan.png" alt=""></a>
