--- a/bekkers.html
+++ b/bekkers.html
@@ -1,7 +1,15 @@
----
-layout: default
----
-
+<!DOCTYPE html>
+<html lang="en-ca">
+<head>
+  <meta charset="utf-8">
+  <title>Shannon Hawn</title>
+  <link href="css/main.css" rel="stylesheet">
+  <meta name="handheldfriendly" content="true">
+  <meta name="mobileoptimized" content="240">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
+</head>
 <body>
 
   <header>
