--- a/index.html
+++ b/index.html
@@ -1,28 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Shannon Hawn</title>
-  <link href="css/main.css" rel="stylesheet">
-  <meta name="handheldfriendly" content="true">
-  <meta name="mobileoptimized" content="240">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
-</head>
-
-<body>
-
-<header>
-    <div class="nav">
-        <a id="nav"></a>
-      <ul>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      </div>
-</header>
+---
+layout: default
+---
 
 <main>
   <div class="image">
@@ -62,5 +40,3 @@
 </div>
 </footer>
 </div>
-
-</body>
