--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 ---
 layout: default
 ---
+<header>
+    <div class="nav">
+        <a id="nav"></a>
+      <ul>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      </div>
+</header>
 
 <main>
   <div class="image">
