created a new  css, added baseurl to links

--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@ layout: default
 
   <div class="work">
     <a id="work"></a>
-
-      <a href="harrypotter.html"><img src="img/hpotter.png" alt=""></a>
-      <a href="bekkers.html"><img src="img/logo.png" alt=""></a>
-      <a href="fromm.html"><img src="img/frommbag.png" alt=""></a>
-      <a href="vegan.html"><img src="img/vegan.png" alt=""></a>
-      <a href="barkpark.html"><img src="img/barkparkphone.png" alt=""></a>
-      <a href="infographic.html"><img src="img/info.png" alt=""></a>
-      <a href="doll.html"><img src="img/doll.png" alt=""></a>
+      <a href="{{site.baseurl}}/harrypotter.html"><img src="img/hpotter.png" alt=""></a>
+      <a href="{{site.baseurl}}/bekkers.html"><img src="img/logo.png" alt=""></a>
+      <a href="{{site.baseurl}}/fromm.html"><img src="img/frommbag.png" alt=""></a>
+      <a href="{{site.baseurl}}/vegan.html"><img src="img/vegan.png" alt=""></a>
+      <a href="{{site.baseurl}}/barkpark.html"><img src="img/barkparkphone.png" alt=""></a>
+      <a href="{{site.baseurl}}/infographic.html"><img src="img/info.png" alt=""></a>
+      <a href="{{site.baseurl}}/doll.html"><img src="img/doll.png" alt=""></a>
   </div>
 
 <div class="contact">
