added basurl links, added photos of projects

--- a/bekkers.html
+++ b/bekkers.html
@@ -15,7 +15,7 @@ layout: default
 <main>
     <h4>Bekker's Pet Care Logo Redesign</h4>
     <div class="image">
-    	<img src="{{site.baseurl}}/http://placehold.it/300x400"/>
+    	<img src="img/logo.png" alt=""></a>
     </div>
     <p></p>
 </main>
