--- a/harrypotter.html
+++ b/harrypotter.html
@@ -14,8 +14,8 @@ layout: default
     <h2>Harry Potter Movie Poster</h2>
 
   <div class="left">
-    <img src="{{site.baseurl}}/img/hpotter.png" alt="">
-    <img src="{{site.baseurl}}/img/vinyl.png" alt="">
+    <img src="img/hpotter.png" alt="">
+    <img src="img/vinyl.png" alt="">
   </div>
 
   <div class="right">
@@ -30,7 +30,7 @@ layout: default
       was incorporated in Indesign. I designed a corresponding album and cover for the movie soundtrack.
       <br>
       <br>
-      <a class="link" href={{site.baseurl}}/"hpsketches.html"> Sketches </a></p>
+      <a class="link" href="hpsketches.html"> Sketches </a></p>
   </div>
 
 <footer>
