added to gitignore, added metadata

--- a/bekkers.html
+++ b/bekkers.html
@@ -1,16 +1,14 @@
 ---
 layout: default
 ---
-  <header>
-      <div class="nav">
-          <a id="nav"></a>
-        <ul>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        </div>
-  </header>
+<header>
+    <div class="nav">
+        <a id="nav"></a>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+      </ul>
+    </div>
+</header>
 
 <main>
     <h4>Bekker's Pet Care Logo Redesign</h4>
