--- a/infographic.html
+++ b/infographic.html
@@ -1,21 +1,19 @@
 ---
 layout: default
 ---
-  <header>
-      <div class="nav">
-          <a id="nav"></a>
-        <ul>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        </div>
-  </header>
+<header>
+    <div class="nav">
+        <a id="nav"></a>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+      </ul>
+    </div>
+</header>
 
 <main>
     <h4>Greenest Ways to Get Around Infographic</h4>
     <div class="image">
-    	<img src="{{site.baseurl}}/http://placehold.it/400x300"/>
+    	<img src="img/info.png"
     </div>
     <p></p>
 </main>
