--- a/vegan.html
+++ b/vegan.html
@@ -2,21 +2,19 @@
 layout: default
 ---
 
-  <header>
-      <div class="nav">
-          <a id="nav"></a>
-        <ul>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        </div>
-  </header>
+<header>
+    <div class="nav">
+        <a id="nav"></a>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+      </ul>
+    </div>
+</header>
 
 <main>
     <h4>Vegan Newsletter</h4>
     <div class="image">
-    	<img src="http://placehold.it/300x400"/>
+    	<img src="img/vegan.png" alt=""></a>
     </div>
     <p></p>
 </main>
