added write ups for each item of work

--- a/barkpark.html
+++ b/barkpark.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
 <header>
     <div class="nav">
@@ -13,9 +14,9 @@ layout: default
 <main>
     <h4>Bark Park App Design</h4>
     <div class="image">
-    	<img src="img/barkparkphone.png" alt=""></a>
+    	<img src="img/barkparkphone.png" alt="App Mockup on iPhone"></a>
     </div>
-    <p></p>
+    <p>Bark Park is a dog park navigation and rating app for Ottawa. The process which lead to the creation of this app included empathy mapping, market research, prototyping, and 2 rounds of usability testing.</p>
 </main>
 
 <div class="contact">
