--- a/doll.html
+++ b/doll.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
 <header>
     <div class="nav">
@@ -13,9 +14,9 @@ layout: default
 <main>
     <h4>Momiji Doll Package</h4>
     <div class="image">
-    	<img src="img/doll.png" alt=""></a>
+    	<img src="img/doll.png" alt="Logo of Doll Packaging"></a>
     </div>
-    <p></p>
+    <p>I designed new branding and packaging for an existing toy: Momiji Doll. This series is for their DIY doll which arrives completely white and the child paints themselves. I created the template to print the packaging.</p>
 </main>
 
 <div class="contact">
