--- a/vegan.html
+++ b/vegan.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Newsletter Layout · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
 
 <header>
@@ -14,9 +15,10 @@ layout: default
 <main>
     <h4>Vegan Newsletter</h4>
     <div class="image">
-    	<img src="img/vegan.png" alt=""></a>
+    	<img src="img/vegan.png" alt="Newsletter about veganism"></a>
     </div>
-    <p></p>
+    <p>I designed a 4 page spread for a Vegan Newsletter for Typography class
+</p>
 </main>
 
 <div class="contact">
