--- a/bekkers.html
+++ b/bekkers.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Logo Design and Branding · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
 <header>
     <div class="nav">
@@ -13,9 +14,9 @@ layout: default
 <main>
     <h4>Bekker's Pet Care Logo Redesign</h4>
     <div class="image">
-    	<img src="img/logo.png" alt=""></a>
+    	<img src="img/logo.png" alt="Logo of a Dog and Cat"></a>
     </div>
-    <p></p>
+    <p>For this project I rebranded an existing company. Bekker's Pet Care is a boarding kennel for cats and dogs. After doing market research I created a logo of a dog and cat sharing their enthusiasm to go to the kennel with their mouths forming a speech bubble. It was important to show that this was a place that a pet would enjoy staying at. I also designed corresponding stationary, employee clothing and website.</p>
 </main>
 
 <div class="contact">
