--- a/fromm.html
+++ b/fromm.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
 <header>
     <div class="nav">
@@ -13,9 +14,9 @@ layout: default
 <main>
     <h4>Fromm Dog Food Package Design</h4>
     <div class="image">
-    	<img src="img/frommbag.png" alt=""></a>
+    	<img src="img/frommbag.png" alt="Bag of Dog Food"></a>
     </div>
-    <p></p>
+    <p>For this project I rebranded a current dog food company - Fromm's. This is a trusted family owned company that prides itself on quality. I wanted to mix the rustic family-owned feeling with high value so I created a series of packaging that is made of recyclable kraft paper which looks rustic, with silhouettes and type that are classic black and white to portray the great quality food inside. I have designed a template for a large box of dog food with handles as well as a smaller bag. This packaging could easily be carried over for all of their flavours.</p>
 </main>
 
 <div class="contact">
