--- a/harrypotter.html
+++ b/harrypotter.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Movie Poster Design · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
 
   <header>
@@ -14,8 +15,8 @@ layout: default
     <h2>Harry Potter Movie Poster</h2>
 
   <div class="left">
-    <img src="img/hpotter.png" alt="">
-    <img src="img/vinyl.png" alt="">
+    <img src="img/hpotter.png" alt="Movie Poster of Harry Potter">
+    <img src="img/vinyl.png" alt="Album Cover">
   </div>
 
   <div class="right">
