--- a/hpsketches.html
+++ b/hpsketches.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Movie Poster Design Process · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
   <header>
       <div class="nav">
