--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ layout: default
 
   <div class="work">
     <a id="work"></a>
-      <a href="{{site.baseurl}}/harrypotter.html"><img src="img/hpotter.png" alt=""></a>
-      <a href="{{site.baseurl}}/bekkers.html"><img src="img/logo.png" alt=""></a>
-      <a href="{{site.baseurl}}/fromm.html"><img src="img/frommbag.png" alt=""></a>
-      <a href="{{site.baseurl}}/vegan.html"><img src="img/vegan.png" alt=""></a>
-      <a href="{{site.baseurl}}/barkpark.html"><img src="img/barkparkphone.png" alt=""></a>
-      <a href="{{site.baseurl}}/infographic.html"><img src="img/info.png" alt=""></a>
-      <a href="{{site.baseurl}}/doll.html"><img src="img/doll.png" alt=""></a>
+      <a href="{{site.baseurl}}/harrypotter.html"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
+      <a href="{{site.baseurl}}/bekkers.html"><img src="img/logo.png" alt="Logo of cat and dog"></a>
+      <a href="{{site.baseurl}}/fromm.html"><img src="img/frommbag.png" alt="Bag of dog food"></a>
+      <a href="{{site.baseurl}}/vegan.html"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
+      <a href="{{site.baseurl}}/barkpark.html"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
+      <a href="{{site.baseurl}}/infographic.html"><img src="img/info.png" alt="infographic"></a>
+      <a href="{{site.baseurl}}/doll.html"><img src="img/doll.png" alt="Doll packaging logo"></a>
   </div>
 
 <div class="contact">
