--- a/infographic.html
+++ b/infographic.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Infographic Design · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
 <header>
     <div class="nav">
@@ -13,9 +14,9 @@ layout: default
 <main>
     <h4>Greenest Ways to Get Around Infographic</h4>
     <div class="image">
-    	<img src="img/info.png"
+    	<img src="img/info.png">
     </div>
-    <p></p>
+    <p>This is an infographic designed to express information about the greenest ways to get around in an eycatching and interesting way. Earthy colours were mixed with bring reds. All illustrations were illustrated by me. </p>
 </main>
 
 <div class="contact">
