added images to doll packaging page

--- a/doll.html
+++ b/doll.html
@@ -14,7 +14,14 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
 <main>
     <h4>Momiji Doll Package</h4>
     <div class="image">
-    	<img src="img/doll.png" alt="Logo of Doll Packaging"></a>
+    	<img src="img/doll.png" alt="Logo of doll packaging"></a>
+      <img src="img/doll1.png" alt="Style sheet doll packaging"></a>
+      <img src="img/doll3.png" alt="Top label of doll packaging"></a>
+      <img src="img/doll4.png" alt="Shopping bag"></a>
+      <img src="img/doll5.png" alt="Doll illustration"></a>
+      <img src="img/doll6.png" alt="Packaging template"></a>
+      <img src="img/doll7.png" alt="Mockup of doll packaging"></a>
+      <img src="img/doll5.png" alt="Doll illustration-front view"></a>
     </div>
     <p>I designed new branding and packaging for an existing toy: Momiji Doll. This series is for their DIY doll which arrives completely white and the child paints themselves. I created the template to print the packaging.</p>
 </main>
