--- a/barkpark.html
+++ b/barkpark.html
@@ -15,6 +15,9 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
     <h4>Bark Park App Design</h4>
     <div class="image">
     	<img src="img/barkparkphone.png" alt="App Mockup on iPhone"></a>
+      <img src="img/barkpark2.jpg" alt="Storyboard"></a>
+      <img src="img/barkpark3.jpg" alt="App Flow"></a>
+      <img src="img/barkpark4.jpg" alt="Map Mockup on iPhone"></a>
     </div>
     <p>Bark Park is a dog park navigation and rating app for Ottawa. The process which lead to the creation of this app included empathy mapping, market research, prototyping, and 2 rounds of usability testing.</p>
 </main>
